--- a/app/src/main/res/layout/activity_subscription.xml
+++ b/app/src/main/res/layout/activity_subscription.xml
@@ -67,7 +67,7 @@
         android:layout_below="@+id/screenTxt"
         android:layout_toEndOf="@+id/backBtn" />
 
-    <EditText
+    <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:inputType="textPersonName"
