--- a/app/src/main/res/layout-land/activity_login.xml
+++ b/app/src/main/res/layout-land/activity_login.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@color/backgroundOrange"
     android:paddingBottom="0dp"
     android:paddingLeft="0dp"
@@ -18,16 +19,12 @@
             android:layout_width="fill_parent"
             android:layout_height="fill_parent">
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentTop="true"
-                android:layout_centerHorizontal="true"
-                android:layout_gravity="center_horizontal"
-                android:fontFamily="sans-serif-medium"
-                android:text="@string/app_name"
-                android:textAppearance="?android:attr/textAppearanceLarge"
-                android:textSize="70sp" />
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="70dp"
+                android:layout_marginTop="20dp"
+                app:srcCompat="@drawable/fitkeeper_logo"
+                android:id="@+id/imageView" />
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -47,7 +44,7 @@
                         android:layout_width="298dp"
                         android:layout_height="40dp"
                         android:layout_gravity="center_horizontal"
-                        android:layout_marginTop="150dp"
+                        android:layout_marginTop="80dp"
                         android:background="@drawable/border"
                         android:ems="10"
                         android:hint="@string/prompt_email"
@@ -84,7 +81,7 @@
                         android:text="@string/login_button"
                         android:textColor="@color/black" />
 
-                    <ImageButton
+                    <!--<ImageButton
                         android:id="@+id/forgotPassBtn"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
@@ -92,7 +89,7 @@
                         android:layout_marginRight="20dp"
                         android:layout_marginTop="80dp"
                         android:background="@drawable/button_bg_rounded_corners"
-                        android:src="@drawable/ic_question_mark" />
+                        android:src="@drawable/ic_question_mark" />-->
                 </LinearLayout>
             </LinearLayout>
         </RelativeLayout>
