--- a/app/src/main/res/layout-large/activity_login.xml
+++ b/app/src/main/res/layout-large/activity_login.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@color/backgroundOrange"
     android:paddingBottom="0dp"
     android:paddingLeft="0dp"
@@ -13,19 +14,6 @@
     <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent">
-
-        <TextView
-            android:id="@+id/screenTxt"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentTop="true"
-            android:layout_centerHorizontal="true"
-            android:layout_gravity="center_horizontal"
-            android:layout_marginTop="100dp"
-            android:fontFamily="sans-serif-medium"
-            android:text="@string/app_name"
-            android:textAppearance="?android:attr/textAppearanceLarge"
-            android:textSize="70sp" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -83,7 +71,7 @@
                     android:text="@string/login_button"
                     android:textColor="@color/black" />
 
-                <ImageButton
+                <!--<ImageButton
                     android:id="@+id/forgotPassBtn"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -91,9 +79,18 @@
                     android:layout_marginRight="20dp"
                     android:layout_marginTop="80dp"
                     android:background="@drawable/button_bg_rounded_corners"
-                    android:src="@drawable/ic_question_mark" />
+                    android:src="@drawable/ic_question_mark" />-->
             </LinearLayout>
         </LinearLayout>
+
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="70dp"
+            android:layout_marginTop="177dp"
+            app:srcCompat="@drawable/fitkeeper_logo"
+            android:id="@+id/imageView"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentStart="true" />
     </RelativeLayout>
 
     <!--
