--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -40,7 +40,7 @@
                     android:layout_width="298dp"
                     android:layout_height="40dp"
                     android:layout_gravity="center_horizontal"
-                    android:layout_marginTop="180dp"
+                    android:layout_marginTop="100dp"
                     android:background="@drawable/border"
                     android:ems="10"
                     android:hint="@string/prompt_email"
@@ -77,7 +77,7 @@
                     android:text="@string/login_button"
                     android:textColor="@color/black" />
 
-                <ImageButton
+                <!--<ImageButton
                     android:id="@+id/forgotPassBtn"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -85,7 +85,7 @@
                     android:layout_marginRight="20dp"
                     android:layout_marginTop="80dp"
                     android:background="@drawable/button_bg_rounded_corners"
-                    android:src="@drawable/ic_question_mark" />
+                    android:src="@drawable/ic_question_mark" />-->
             </LinearLayout>
         </LinearLayout>
     </RelativeLayout>
