--- a/app/src/main/res/layout-land/activity_home.xml
+++ b/app/src/main/res/layout-land/activity_home.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:paddingBottom="0dp"
     android:paddingLeft="0dp"
     android:paddingRight="0dp"
@@ -48,28 +49,7 @@
         android:layout_width="fill_parent"
         android:layout_height="fill_parent">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="@string/app_name"
-        android:id="@+id/AppName"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="40dp"
-        android:textSize="50sp"/>
-
-    <Button
-        android:layout_width="200dp"
-        android:layout_height="wrap_content"
-        android:text="@string/user_info_button"
-        android:textColor="@color/black"
-        android:id="@+id/btnHome"
-        android:layout_below="@+id/AppName"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="55dp"
-        android:background="@drawable/button_bg_rounded_corners"/>
-
-    <Button
+        <Button
         android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:text="@string/workout_button"
@@ -91,28 +71,49 @@
         android:layout_marginTop="33dp"
         android:background="@drawable/button_bg_rounded_corners"/>
 
-    <ImageButton
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:id="@+id/settingsButton"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentEnd="true"
-        android:layout_marginRight="20dp"
-        android:layout_below="@+id/btnSubscription"
-        android:src="@drawable/ic_settings_icon"
-        android:background="@drawable/button_bg_rounded_corners"/>
-
-    <!--<ImageButton
-        android:layout_width="wrap_content"
+        <Button
+        android:layout_width="200dp"
         android:layout_height="wrap_content"
-        android:id="@+id/imageButton2"
-        android:src="@drawable/ic_logout_icon"
-        android:layout_alignBottom="@+id/imageButton"
-        android:layout_alignParentStart="true"
-        android:layout_marginLeft="20dp"
-        android:background="@color/mainOrange"/>
+        android:text="@string/user_info_button"
+        android:textColor="@color/black"
+        android:id="@+id/btnHome"
+            android:background="@drawable/button_bg_rounded_corners"
+            android:layout_marginTop="19dp"
+            android:layout_below="@+id/imageView2"
+            android:layout_centerHorizontal="true" />
 
-        COLOCAR BOTAO DE DESLOGAR DENTRO DAS CONFIGURAÇÕES!-->
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="80dp"
+            app:srcCompat="@drawable/fitkeeper_logo"
+            android:id="@+id/imageView2"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentStart="true"
+            android:layout_marginTop="16dp" />
+
+        <ImageButton
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:id="@+id/settingsButton"
+            android:layout_marginRight="20dp"
+            android:src="@drawable/ic_settings_icon"
+            android:background="@drawable/button_bg_rounded_corners"
+            android:layout_marginEnd="23dp"
+            android:layout_alignTop="@+id/btnSubscription"
+            android:layout_alignParentEnd="true"
+            android:layout_marginTop="21dp" />
+
+        <!--<ImageButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/imageButton2"
+            android:src="@drawable/ic_logout_icon"
+            android:layout_alignBottom="@+id/imageButton"
+            android:layout_alignParentStart="true"
+            android:layout_marginLeft="20dp"
+            android:background="@color/mainOrange"/>
+
+            COLOCAR BOTAO DE DESLOGAR DENTRO DAS CONFIGURAÇÕES!-->
 
     </RelativeLayout>
 
