--- a/app/src/main/res/layout-large/activity_info.xml
+++ b/app/src/main/res/layout-large/activity_info.xml
@@ -37,7 +37,7 @@
         android:layout_marginTop="100dp"
         android:text="@string/user_info_name"
         android:textAppearance="?android:attr/textAppearanceLarge"
-        android:textSize="60sp" />
+        android:textSize="90sp" />
 
     <!--
     <Spinner
@@ -67,7 +67,7 @@
         android:layout_alignStart="@+id/spinner"
         android:layout_below="@+id/spinner"
         android:layout_marginLeft="18dp"
-        android:layout_marginTop="397dp"
+        android:layout_marginTop="347dp"
         android:text="@string/name_user_info" />
 
     <TextView
@@ -102,7 +102,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignStart="@+id/weightTxt"
-        android:layout_below="@+id/weightTxt"
+        android:layout_below="@+id/weightGraph"
         android:layout_marginTop="28dp"
         android:text="@string/imc_user_info" />
 
@@ -155,6 +155,32 @@
         android:layout_marginBottom="49dp"
         android:background="@drawable/button_bg_rounded_corners"
         android:src="@drawable/ic_back_button" />
+
+    <com.jjoe64.graphview.GraphView
+        android:layout_width="match_parent"
+        android:layout_height="100dip"
+        android:id="@+id/weightGraph"
+        android:layout_below="@+id/weightTxt"/>
+
+    <TextView
+        android:id="@+id/workoutCounterTxt"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/workouts_user_info"
+        android:layout_alignParentBottom="true"
+        android:layout_alignStart="@+id/imcTxt"
+        android:layout_below="@+id/imcTxt"
+        android:layout_marginTop="23dp"/>
+
+    <TextView
+        android:id="@+id/workoutsTxtValue"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBaseline="@+id/workoutCounterTxt"
+        android:layout_alignBottom="@+id/workoutCounterTxt"
+        android:layout_marginStart="33dp"
+        android:layout_toEndOf="@+id/workoutCounterTxt"
+        android:text="" />
 
 
 </RelativeLayout>
