--- a/app/src/main/res/layout-large/activity_settings.xml
+++ b/app/src/main/res/layout-large/activity_settings.xml
@@ -37,23 +37,11 @@
         android:layout_marginTop="100dp"
         android:text="@string/settings_name"
         android:textAppearance="?android:attr/textAppearanceLarge"
-        android:textSize="60sp" />
-
-    <EditText
-        android:id="@+id/emailEdtTxt"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/screenTxt"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="200dp"
-        android:background="@drawable/border"
-        android:hint="@string/prompt_email"
-        android:inputType="textEmailAddress"
-        android:padding="5dp" />
+        android:textSize="90sp" />
 
     <EditText
         android:id="@+id/crtPassEdtTxt"
-        android:layout_width="match_parent"
+        android:layout_width="400dp"
         android:layout_height="wrap_content"
         android:layout_below="@+id/emailEdtTxt"
         android:layout_centerHorizontal="true"
@@ -65,7 +53,7 @@
 
     <EditText
         android:id="@+id/newPassEdtTxt"
-        android:layout_width="match_parent"
+        android:layout_width="400dp"
         android:layout_height="wrap_content"
         android:layout_below="@+id/crtPassEdtTxt"
         android:layout_centerHorizontal="true"
@@ -77,7 +65,7 @@
 
     <EditText
         android:id="@+id/rptPassEdtText"
-        android:layout_width="match_parent"
+        android:layout_width="400dp"
         android:layout_height="wrap_content"
         android:layout_below="@+id/newPassEdtTxt"
         android:layout_centerHorizontal="true"
@@ -88,36 +76,49 @@
         android:padding="5dp" />
 
     <Button
+        android:id="@+id/logoutBtn"
+        style="?android:attr/buttonStyleSmall"
+        android:layout_width="90dp"
+        android:layout_height="wrap_content"
+        android:background="@drawable/button_bg_rounded_corners"
+        android:text="@string/logout_button_name"
+        android:textColor="@color/black"
+        android:layout_below="@+id/rptPassEdtText"
+        android:layout_alignStart="@+id/screenTxt"
+        android:layout_marginTop="91dp" />
+
+    <Button
         android:id="@+id/saveBtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_above="@+id/backBtn"
-        android:layout_alignParentEnd="true"
-        android:layout_marginBottom="49dp"
         android:background="@drawable/button_bg_rounded_corners"
         android:text="@string/save_button_name"
-        android:textColor="@color/black" />
+        android:textColor="@color/black"
+        android:layout_alignBaseline="@+id/logoutBtn"
+        android:layout_alignBottom="@+id/logoutBtn"
+        android:layout_alignEnd="@+id/screenTxt" />
 
-    <Button
-        android:id="@+id/logoutBtn"
-        style="?android:attr/buttonStyleSmall"
-        android:layout_width="wrap_content"
+    <EditText
+        android:id="@+id/emailEdtTxt"
+        android:layout_width="400dp"
         android:layout_height="wrap_content"
-        android:layout_alignEnd="@+id/backBtn"
-        android:layout_alignParentStart="true"
-        android:layout_alignTop="@+id/saveBtn"
-        android:background="@drawable/button_bg_rounded_corners"
-        android:text="@string/logout_button_name"
-        android:textColor="@color/black" />
+        android:layout_marginTop="126dp"
+        android:background="@drawable/border"
+        android:hint="@string/prompt_email"
+        android:inputType="textEmailAddress"
+        android:padding="5dp"
+        android:layout_below="@+id/screenTxt"
+        android:layout_alignStart="@+id/crtPassEdtTxt" />
 
     <ImageButton
         android:id="@+id/backBtn"
         android:layout_width="70dp"
         android:layout_height="50dp"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentStart="true"
         android:background="@drawable/button_bg_rounded_corners"
-        android:src="@drawable/ic_back_button" />
+        android:src="@drawable/ic_back_button"
+        android:layout_alignParentBottom="true"
+        android:layout_toStartOf="@+id/rptPassEdtText"
+        android:layout_marginBottom="102dp" />
 
 
 </RelativeLayout>
