--- a/app/src/main/res/layout-land/activity_workout.xml
+++ b/app/src/main/res/layout-land/activity_workout.xml
@@ -71,7 +71,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerHorizontal="true"
-                android:layout_marginTop="240dp"
+                android:layout_marginTop="180dp"
                 android:background="#FFFFFF">
 
                 <TableRow android:background="@color/lightGray">
@@ -293,9 +293,10 @@
                 android:layout_width="70dp"
                 android:layout_height="50dp"
                 android:layout_alignParentBottom="true"
-                android:layout_below="@+id/table"
+                android:layout_below="@+id/workout_info_message"
                 android:background="@drawable/button_bg_rounded_corners"
-                android:src="@drawable/ic_back_button" />
+                android:src="@drawable/ic_back_button"
+                android:layout_marginLeft="10dp" />
 
             <Button
                 android:text="@string/workout_finish"
