--- a/app/src/main/res/layout-large-land/activity_workout.xml
+++ b/app/src/main/res/layout-large-land/activity_workout.xml
@@ -38,7 +38,7 @@
         android:layout_gravity="center_horizontal"
         android:text="@string/workout_name"
         android:textAppearance="?android:attr/textAppearanceLarge"
-        android:textSize="60sp" />
+        android:textSize="90sp" />
 
     <Spinner
         android:id="@+id/spinnerWeek"
@@ -238,14 +238,36 @@
         </TableRow>
     </TableLayout>
 
+    <Button
+        android:text="@string/workout_finish"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/finish_workout_btn"
+        android:visibility="invisible"
+        android:background="@drawable/button_bg_rounded_corners"
+        android:textColor="@color/black"
+        android:layout_below="@+id/table"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="16dp" />
+
+    <TextView
+        android:text=""
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="12dp"
+        android:visibility="invisible"
+        android:id="@+id/workout_info_message"
+        android:layout_below="@+id/finish_workout_btn"
+        android:layout_centerHorizontal="true" />
+
     <ImageButton
         android:id="@+id/backBtn"
         android:layout_width="70dp"
         android:layout_height="50dp"
-        android:layout_alignParentBottom="true"
-        android:layout_marginBottom="30dp"
         android:background="@drawable/button_bg_rounded_corners"
-        android:src="@drawable/ic_back_button" />
+        android:src="@drawable/ic_back_button"
+        android:layout_below="@+id/finish_workout_btn"
+        android:layout_alignStart="@+id/spinnerWeek" />
 
 
 </RelativeLayout>
