--- a/app/src/main/res/layout-large/activity_workout.xml
+++ b/app/src/main/res/layout-large/activity_workout.xml
@@ -38,7 +38,7 @@
         android:layout_gravity="center_horizontal"
         android:text="@string/workout_name"
         android:textAppearance="?android:attr/textAppearanceLarge"
-        android:textSize="60sp" />
+        android:textSize="90sp" />
 
     <Spinner
         android:id="@+id/spinnerWeek"
@@ -248,6 +248,28 @@
         android:layout_marginStart="30dp"
         android:background="@drawable/button_bg_rounded_corners"
         android:src="@drawable/ic_back_button" />
+
+    <TextView
+        android:text=""
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="12dp"
+        android:visibility="invisible"
+        android:id="@+id/workout_info_message"
+        android:layout_below="@+id/finish_workout_btn"
+        android:layout_centerHorizontal="true" />
+
+    <Button
+        android:text="@string/workout_finish"
+        android:layout_width="100dp"
+        android:layout_height="wrap_content"
+        android:id="@+id/finish_workout_btn"
+        android:visibility="invisible"
+        android:background="@drawable/button_bg_rounded_corners"
+        android:textColor="@color/black"
+        android:layout_marginTop="15dp"
+        android:layout_below="@+id/table"
+        android:layout_centerHorizontal="true" />
 
 
 </RelativeLayout>
