--- a/app/src/main/res/layout-large/activity_workout.xml
+++ b/app/src/main/res/layout-large/activity_workout.xml
@@ -95,6 +95,13 @@
                 android:text="@string/weight_name"
                 android:textColor="@color/black"
                 android:textSize="20dp" />
+
+            <TextView
+                android:background="@drawable/border2"
+                android:padding="3dip"
+                android:text="  ✓ "
+                android:textColor="@color/black"
+                android:textSize="20dp" />
         </TableRow>
 
         <TableRow>
@@ -130,6 +137,15 @@
                 android:text="20kg"
                 android:textColor="@color/black"
                 android:textSize="20dp" />
+
+            <CheckBox
+                android:id="@+id/checkbox_1"
+                android:background="@drawable/border2"
+                android:onClick="onCheckboxClicked"
+                android:padding="3dp"
+                android:text=""
+                android:textColor="@color/black"
+                android:textSize="20dp"/>
         </TableRow>
 
         <TableRow>
@@ -165,6 +181,15 @@
                 android:text="20kg"
                 android:textColor="@color/black"
                 android:textSize="20dp" />
+
+            <CheckBox
+                android:id="@+id/checkbox_2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerHorizontal="true"
+                android:background="@drawable/border2"
+                android:onClick="onCheckboxClicked"
+                android:textSize="20dp"/>
         </TableRow>
 
         <TableRow>
@@ -200,6 +225,14 @@
                 android:text="20kg"
                 android:textColor="@color/black"
                 android:textSize="20dp" />
+
+            <CheckBox
+                android:id="@+id/checkbox_3"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@drawable/border2"
+                android:onClick="onCheckboxClicked"
+                android:textSize="20dp"/>
         </TableRow>
 
         <TableRow>
@@ -235,6 +268,15 @@
                 android:text="20kg"
                 android:textColor="@color/black"
                 android:textSize="20dp" />
+
+            <CheckBox
+                android:id="@+id/checkbox_4"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@drawable/border2"
+                android:onClick="onCheckboxClicked"
+                android:padding="3dip"
+                android:textSize="20dp"/>
         </TableRow>
     </TableLayout>
 
