Correção de layout da tela de subscription para Smartphone (retrato e paisagem)

--- a/app/src/main/res/layout-land/activity_subscription.xml
+++ b/app/src/main/res/layout-land/activity_subscription.xml
@@ -50,34 +50,25 @@
                 android:id="@+id/membershipEdtTxt"
                 android:layout_width="250dp"
                 android:layout_height="30dp"
-                android:layout_alignStart="@+id/membershipTxt"
                 android:layout_below="@+id/membershipTxt"
                 android:layout_marginRight="20dp"
                 android:layout_marginTop="10dp"
                 android:background="@drawable/border"
-                android:padding="5dp" />
-
-            <TextView
-                android:id="@+id/membershipLstDayTxt"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignStart="@+id/membershipEdtTxt"
-                android:layout_below="@id/membershipEdtTxt"
+                android:padding="5dp"
                 android:layout_centerVertical="true"
-                android:layout_marginTop="24dp"
-                android:text="@string/membership_last_day_name"
-                android:textSize="25sp" />
+                android:layout_centerHorizontal="true"/>
 
             <TextView
                 android:id="@+id/membershipLstDayEdtTxt"
                 android:layout_width="250dp"
                 android:layout_height="30dp"
-                android:layout_alignStart="@+id/membershipLstDayTxt"
                 android:layout_below="@+id/membershipLstDayTxt"
                 android:background="@drawable/border"
                 android:ems="10"
                 android:inputType="date"
-                android:padding="5dp" />
+                android:padding="5dp"
+                android:layout_centerVertical="true"
+                android:layout_centerHorizontal="true"/>
 
             <Button
                 android:id="@+id/renewBtn"
@@ -137,7 +128,8 @@
                 android:layout_height="50dp"
                 android:layout_marginLeft="30dp"
                 android:layout_above="@+id/cardNumberLabel"
-                android:layout_alignStart="@+id/renewMbshpLabel" />
+                android:layout_centerVertical="true"
+                android:layout_centerHorizontal="true"/>
 
             <TextView
                 android:text="@string/membership_renew_button_name"
@@ -146,18 +138,29 @@
                 android:id="@+id/renewMbshpLabel"
                 android:textSize="25sp"
                 android:layout_below="@+id/membershipLstDayEdtTxt"
-                android:layout_alignEnd="@+id/screenTxt"
-                android:layout_marginTop="13dp" />
+                android:layout_marginTop="13dp"
+                android:layout_centerVertical="true"
+                android:layout_centerHorizontal="true"/>
 
             <TextView
                 android:id="@+id/membershipTxt"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="51dp"
+                android:layout_marginTop="43dp"
                 android:text="@string/membership_plan_name"
                 android:textSize="25sp"
                 android:layout_below="@+id/screenTxt"
-                android:layout_alignStart="@+id/screenTxt" />
+                android:layout_alignStart="@+id/membershipEdtTxt" />
+
+            <TextView
+                android:id="@+id/membershipLstDayTxt"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="18dp"
+                android:text="@string/membership_last_day_name"
+                android:textSize="25sp"
+                android:layout_below="@+id/membershipEdtTxt"
+                android:layout_alignStart="@+id/membershipLstDayEdtTxt" />
 
         </RelativeLayout>
     </ScrollView>
