--- a/app/src/main/res/layout/activity_workout.xml
+++ b/app/src/main/res/layout/activity_workout.xml
@@ -165,6 +165,7 @@
                 android:textSize="20dp" />
 
             <TextView
+                android:id="@+id/weight1"
                 android:background="@drawable/border2"
                 android:text="20kg"
                 android:padding="3dip"
