--- a/app/src/main/res/layout-large-land/activity_workout.xml
+++ b/app/src/main/res/layout-large-land/activity_workout.xml
@@ -47,14 +47,17 @@
         android:layout_alignParentStart="true"
         android:layout_below="@+id/screenTxt"
         android:layout_marginLeft="30dp"
-        android:layout_marginTop="38dp" />
+        android:layout_marginTop="38dp"
+        android:layout_centerHorizontal="true"
+        android:visibility="invisible"/>
 
     <TextView
         android:id="@+id/currentDayTxt"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/spinnerWeek"
-        android:layout_toEndOf="@+id/backBtn"
+        android:layout_centerHorizontal="true"
+        android:textSize="20sp"
         android:text=""
         android:textAppearance="?android:attr/textAppearanceSmall" />
 
