--- a/app/src/main/res/layout/activity_workout.xml
+++ b/app/src/main/res/layout/activity_workout.xml
@@ -47,16 +47,18 @@
         android:layout_alignParentStart="true"
         android:layout_below="@+id/screenTxt"
         android:layout_marginLeft="30dp"
-        android:layout_marginTop="38dp" />
+        android:layout_marginTop="38dp"
+        android:visibility="invisible"/>
 
     <TextView
         android:id="@+id/currentDayTxt"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/spinnerWeek"
-        android:layout_toEndOf="@+id/backBtn"
+        android:textSize="20sp"
         android:text=""
-        android:textAppearance="?android:attr/textAppearanceSmall" />
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:layout_centerHorizontal="true"/>
 
     <ImageButton
         android:id="@+id/backBtn"
@@ -76,18 +78,6 @@
         android:visibility="invisible"
         android:id="@+id/workout_info_message"
         android:layout_below="@+id/finish_workout_btn"
-        android:layout_centerHorizontal="true" />
-
-    <Button
-        android:text="@string/workout_finish"
-        android:layout_width="100dp"
-        android:layout_height="wrap_content"
-        android:id="@+id/finish_workout_btn"
-        android:visibility="invisible"
-        android:background="@drawable/button_bg_rounded_corners"
-        android:textColor="@color/black"
-        android:layout_marginTop="15dp"
-        android:layout_below="@+id/table"
         android:layout_centerHorizontal="true" />
 
     <TableLayout
@@ -318,6 +308,18 @@
                 android:textSize="20dp"/>
         </TableRow>
     </TableLayout>
+
+    <Button
+        android:text="@string/workout_finish"
+        android:layout_width="100dp"
+        android:layout_height="wrap_content"
+        android:id="@+id/finish_workout_btn"
+        android:visibility="invisible"
+        android:background="@drawable/button_bg_rounded_corners"
+        android:textColor="@color/black"
+        android:layout_marginTop="15dp"
+        android:layout_below="@+id/table"
+        android:layout_centerHorizontal="true" />
 
 
 </RelativeLayout>
